# assogram

./: pyproject.toml
commands/: hello.md
src/: assogram.py
src/commands/: amimir.py  aperu.py  bal.py  base.py  bts.py  gala.py  halloween.py  neon.py  table.py  voyage.py
